--- a/config
+++ b/config
@@ -1,3 +1,6 @@
+#
+# ~/.gitconfig
+#
 
 $ git config --list
 
@@ -6,4 +9,12 @@ $ git config --global user.name "your_name"
 
 # user email
 $ git config --global user.email "your_email"
+
+#
+$ git config --global alias.st status
+$ git config --global alias.co checkout
+
+# remove \r
+$ git config --global core.autocrlf true
+
 
